YOR-27: Fix cta group responsive alignment

--- a/components/01-atoms/controls/cta/_yds-cta.scss
+++ b/components/01-atoms/controls/cta/_yds-cta.scss
@@ -344,6 +344,7 @@ $cta-outline-weights: (
 // @TODO: Temporary place for this
 .cta-group {
   display: flex;
+  flex-wrap: wrap;
   gap: var(--size-spacing-7);
   margin-bottom: var(--size-spacing-7);
 
